fixbug:select field get smaller(no correct height) when no placeholder.stop line wrap  when option text toolong.

--- a/src/components/Rselect/select.module.css
+++ b/src/components/Rselect/select.module.css
@@ -25,6 +25,9 @@
 
 .selectSelected {
   background-color: rgba(252, 252, 252, 0);
+  height: 21px;
+    white-space: nowrap;
+    overflow-x: clip;
 
 }
 
